# one-billion-row-challange

./: Cargo.toml  test.txt
benches/: 1brc.rs
golang/: go.mod  main.go  main_test.go
rust/benches/: 1brc.rs
src/: lib.rs  main.rs
